--- a/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
+++ b/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
@@ -96,7 +96,7 @@ ggplot(first_wave, aes(x = Date, y = Cases)) +
 ```
 
 # Coding Interventions
-We're going to model two interventions: the emergency declaration, which was made on March 26, and the start of curfew, which was on March 4th.
+We're going to model two interventions: the emergency declaration, which was made on March 26, and the start of curfew, which was on April 3rd.
 
 ```{r key-dates}
 fitting_start_date <- as.Date("2020-03-07") # start of fitting window
@@ -121,7 +121,15 @@ ggplot(outbreak, aes(x = Date, y = Cases)) +
     geom_vline(xintercept = emergency_start_date, colour='firebrick', 
                linetype='dashed', size=1.3) +
     geom_vline(xintercept = curfew_start_date, colour='firebrick', 
-               linetype='dashed', size=1.3)
+               linetype='dashed', size=1.3) +
+    annotate(
+        geom = "text",
+        label = c("lockdown", "Curfew"),
+        x = c(emergency_start_date, curfew_start_date),
+        y = c(175, 175),
+        angle = 90,
+        vjust = 1.5
+    )
 ```
 
 One of the most important things when you're doing an optimisation is a decent initial guess at your parameter values. Luckily, in a previous session, we got a good estimate of R0, and we know a few things about how effective the various interventions might be.
@@ -255,7 +263,7 @@ out_init <- out_init %>%
 
 # Plot initial estimate
 ggplot(outbreak) +
-    geom_col(aes(x = Date, y = Cases), width = 1, fill = "dodgerblue2", colour = "blue") +
+    geom_col(aes(x = Date, y = Cases), width = 1, fill = "gray", colour = "darkgray") +
     geom_ribbon(
         data = out_init[-1, ], aes(x = Date, ymin = lower50, ymax = upper50),
         fill = "firebrick2", colour = "firebrick2", alpha = 0.8
@@ -269,9 +277,17 @@ ggplot(outbreak) +
     ggtitle("Thailand's First Wave, 2020") +
     theme_bw()+
     geom_vline(xintercept = emergency_start_date, colour='firebrick', 
-               linetype='dashed', size=1.3) +
+               linetype='dashed', size=1) +
     geom_vline(xintercept = curfew_start_date, colour='firebrick', 
-               linetype='dashed', size=1.3)
+               linetype='dashed', size=1) +
+    annotate(
+        geom = "text",
+        label = c("lockdown", "Curfew"),
+        x = c(emergency_start_date, curfew_start_date),
+        y = c(175, 175),
+        angle = 90,
+        vjust = 1.5
+    )
 ```
 
 Not bad! What do you observe? Why do you think this might be, and how can the fit be improved?
@@ -404,8 +420,8 @@ ggplot(outbreak) +
     geom_col(
         aes(x = Date, y = Cases),
         width = 1.0,
-        fill = "dodgerblue2",
-        colour = "blue"
+        fill = "gray",
+        colour = "darkgray"
     ) +
     geom_ribbon(
         data = optimal_solution[-1, ],
@@ -422,11 +438,11 @@ ggplot(outbreak) +
     ggtitle("Intervention model fit (optimized)") +
     geom_vline(
         aes(xintercept = emergency_start_date),
-        linetype = "dashed"
+        linetype = "dashed", colour = "firebrick"
     ) +
     geom_vline(
         aes(xintercept = curfew_start_date),
-        linetype = "dashed"
+        linetype = "dashed", colour = "firebrick"
     ) +
     annotate(
         geom = "text",
@@ -479,3 +495,136 @@ What other interesting counterfactual scenarios could we explore?
 
 Which of the scenarios you suggested previously might be of interest to the general public and why? Would the scenarios of interest to decision makers be different? If so, how and why?
 <textarea name='Text1' cols='127' rows='2'></textarea>
+
+# Counterfactuals example solution
+
+::: {.panel-tabset}
+
+## Spoiler alert
+
+The solutions tab contains the complete code for the counterfactuals. **Only click on it if
+you have tried to complete the exercises yourself and need some help**
+
+## Solutions for Exploring counterfactuals
+
+Your code to explore the counterfactuals might look like this:
+
+```{r counter_factual_eg_solutions, echo=TRUE, eval=FALSE}
+# create a function to do the same steps over for us
+scenario.exploration = function(lockdown_eff, curfew_eff, lockdown_start, curfew_start, plot_title){
+  
+  new_params = parameters 
+  new_params[c("lockdown_efficacy", "curfew_efficacy")] = c(lockdown_eff, curfew_eff)
+
+  new_solution <- solve.intervention.model(
+    y_ = state,
+    times_ = times,
+    func. = COVID.intervention,
+    parms = new_params
+)
+  
+  
+# Calculate the observational confidence intervals
+observational_intervals <- new_solution %>%
+    mutate(
+        lower50 = qpois(p = 0.25, lambda = Incidence), # 50% confidence interval (i.e., 25 - 75th centiles)
+        upper50 = qpois(p = 0.75, lambda = Incidence),
+        lower95 = qpois(p = 0.025, lambda = Incidence), # 95% confidence interval (i.e., 2.5 - 97.5th centiles)
+        upper95 = qpois(p = 0.975, lambda = Incidence)
+    )
+
+ggplot(outbreak) +
+    geom_col(
+        aes(x = Date, y = Cases),
+        width = 1.0,
+        fill = "gray",
+        colour = "darkgray"
+    ) +
+    geom_ribbon(
+        data = observational_intervals[-1, ],
+        aes(x = Date, ymin = lower50, ymax = upper50),
+        fill = "darkorchid4", colour = "darkorchid4", alpha = 0.8
+    ) +
+    geom_ribbon(
+        data = observational_intervals[-1, ],
+        aes(x = Date, ymin = lower95, ymax = upper95),
+        fill = "darkorchid4", colour = "darkorchid4", alpha = 0.5
+    ) +
+    #geom_point(data=optim_solution[-1,], aes(x=Date, y=Incidence), size=2, colour="firebrick2") +
+    geom_point(data=new_solution[-1,], aes(x=Date, y=Incidence), size=2, colour="darkorchid4") +
+    ylab("Daily cases") +
+    xlab("") +
+    ggtitle(plot_title) +
+    geom_vline(
+        aes(xintercept = lockdown_start),
+        linetype = "dashed", colour = "firebrick"
+    ) +
+    geom_vline(
+        aes(xintercept = curfew_start),
+        linetype = "dashed", colour = "firebrick"
+    ) +
+    annotate(
+        geom = "text",
+        label = c("lockdown", "Curfew"),
+        x = c(lockdown_start, curfew_start),
+        y = c(175, 175),
+        angle = 90,
+        vjust = 1.5
+    ) +
+    theme(panel.background = element_rect(fill = "white", colour = "white"),
+          panel.grid.major = element_line(colour = "grey90"),
+          panel.grid.major.x = element_blank(),
+          axis.line = element_line(size = 0.4, colour = "grey10"),
+          text = element_text(size=12,  family="serif"),
+          legend.key = element_rect(fill = "white", colour = "white"),
+          legend.position = "top",
+          strip.background =element_rect(fill="royalblue"),
+          strip.text = element_text(size = 10, colour = 'white'))
+}
+
+### No intervention ###
+scenario.exploration(lockdown_eff=0, curfew_eff=0, 
+                     lockdown_start=emergency_start_date, 
+                     curfew_start=curfew_start_date, 
+                     plot_title="Counterfactual: No interventions")
+
+### What could have happened if we the emergency declaration made earlier? ###
+# Store original values 
+emergency_start_date_orig = emergency_start_date
+curfew_start_date_orig = curfew_start_date
+# set new values
+emergency_start_date <- fitting_start_date  #  fitting start date
+scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+                     curfew_eff=optimal_parameters["curfew_efficacy"], 
+                     lockdown_start=emergency_start_date, 
+                     curfew_start=curfew_start_date, 
+                     plot_title="Counterfactual: Emergency declaration made at beginning of fitting window")
+# set new values
+emergency_start_date <- fitting_start_date + 10 # 10 days after fitting start date
+scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+                     curfew_eff=optimal_parameters["curfew_efficacy"], 
+                     lockdown_start=emergency_start_date, 
+                     curfew_start=curfew_start_date, 
+                     plot_title="Counterfactual: Emergency declaration made 10 dates after fitting window")
+# now make it so no curfew in this scenario
+curfew_start_date <- fitting_end_date
+scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+                     curfew_eff=optimal_parameters["curfew_efficacy"], 
+                     lockdown_start=emergency_start_date, 
+                     curfew_start=curfew_start_date, 
+                     plot_title="Counterfactual: Emergency declaration made 10 days after fitting window, no curfew")
+
+
+### Curfew starts at same time as state of emergency declared ###
+emergency_start_date <- emergency_start_date_orig
+curfew_start_date <- emergency_start_date
+scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+                     curfew_eff=optimal_parameters["curfew_efficacy"], 
+                     lockdown_start=emergency_start_date, 
+                     curfew_start=curfew_start_date, 
+                     plot_title="Counterfactual: Curfew starts same time as emergency declaration")
+
+
+
+```
+:::
