--- a/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
+++ b/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
@@ -45,12 +45,14 @@ This session is divided into four parts:
 **Part 4**: Confidence intervals derived from likelihood methods
 
 # Model fitting
-The first exercise in this session is to fit a model "by eye". We hope that by the end of the exercise you will be thinking to yourself "there must be an easier and more robust way to do this". This of course motivates the rest of the session. First open Shiny application Least_Squares_App.Rmd. (App can be accessed online [here](https://moru.shinyapps.io/Least_Squares_App/)). In this application the dots represent the data and the line represents predicted values based on a mathematical model (in this case a simple cubic equation). This application allows you to explore how changing model parameters changes SSQ (sum of squares of residuals). It is intended to give you an intuitive feel for how a model fitting approach that aims to minimize the SSQs works.
+The first exercise in this session is to fit a model "by eye". We hope that by the end of the exercise you will be thinking to yourself "there must be an easier and more robust way to do this". This of course motivates the rest of the session. 
+<!-- todo: Show the process instead of sending everyone to the app -->
+First open Shiny application Least_Squares_App.Rmd. (App can be accessed online [here](https://moru.shinyapps.io/Least_Squares_App/)). In this application the dots represent the data and the line represents predicted values based on a mathematical model (in this case a simple cubic equation). This application allows you to explore how changing model parameters changes SSQ (sum of squares of residuals). It is intended to give you an intuitive feel for how a model fitting approach that aims to minimize the SSQs works.
 
 Try to find the best fitting line by adjusting the three parameters with the sliders. Check your answer with the application.
 
 ## Questions
-What are the residuals?
+What are the best SSQs (residuals)?
 <textarea name='Text1' cols='127' rows='2'></textarea>
 
 What disadvantages might there be of fitting models by hand like this?
@@ -65,18 +67,24 @@ In the example we have been minimizing the sum of squares of the residuals. What
 # Distance Function
 In this section we will use the sum of squares distance to see how far our model results are from the data. To do so, we will use the model developed in the last session and the initial data in March 2020. To determine our parameters of interest we will minimise our sum of squares and assess model fit to data.
 
+<!-- fixme: Swap out dataset to match the previous dataset -->
+
+<!-- fixme: Add description of the SEIR model to be used -->
+
 In this practical we are going to estimate some of the parameters of our base SEIR COVID-19 model by fitting it to our incidence data.
-What are the free parameters of our base model?
+What are the unknown parameters of our base model?
 
 <textarea name='Text1' cols='127' rows='2'></textarea>
 
-In this exercise let us assume a known latent period and infectious period and use the basic reproduction number, $R_0$, and the initial size of the infected population, $I(t=0)$, as the free parameters we will calibrate using our data.
+In this exercise let us assume a known latent period and infectious period and use the basic reproduction number, $\mathcal{R}_0$, and the initial size of the infected population, $I(t=0)$, as the free parameters we will calibrate using our data.
 
 To begin, create a new R script, save the file as `fitting_models.R` into your working directory, and copy the code chunk below:
 
+<!-- fixme: Library loading checking / installing -->
 ```{r load-libraries}
 #| message: false
-# SPARK Modelling Short course
+#| warning: false
+# SPARKLE Modelling Short course
 
 #########################
 ## FITTING MODELS IN R ##
@@ -87,13 +95,12 @@ library(ggplot2)
 ```
 
 ## Filtering the data
-When calibrating each of these parameters, one thing we must be careful of is to account for the introduction of various interventions as these will likely have a significant impact on the parameter values (the reproduction number in particular). Therefore, in the code provided below I first isolate the "pre-intervention" era (which we defined in the last session as the first wave between 7th and 26th March 2020. We will use this truncated dataset to estimate the parameters, $R_0$ and `initial_infected_population`. The code below should let you view the data we are using to fit the model.
+When calibrating each of these parameters, one thing we must be careful of is to account for the introduction of various interventions as these will likely have a significant impact on the parameter values (the reproduction number in particular). Therefore, in the code provided below I first isolate the "pre-intervention" era (which we defined in the last session as the first wave between 7th and 26th March 2020. We will use this truncated dataset to estimate the parameters, $\mathcal{R}_0$ and `initial_infected_population`. The code below should let you view the data we are using to fit the model.
 
 ```{r load-data}
 # Data imports and filtering
 first_wave <- read.csv("first_wave_TH.csv", colClasses = c("Date", "numeric", "numeric"))
-# fixing the format of date
-first_wave$Date <- as.Date(first_wave$Date, format = "%Y-%m-%d")
+
 # Time window
 start_date <- as.Date("2020-03-07")
 end_date <- as.Date("2020-03-26")
@@ -132,7 +139,7 @@ Initial_infectious <- 20 # Initial infectious seed
 Initial_recovered <- 0
 Initial_susceptible <- Total_population - Initial_exposed - Initial_infectious - Initial_recovered
 
-# State variables
+# Compartments
 state <- c(
     Susceptible = Initial_susceptible,
     Exposed = Initial_exposed,
@@ -144,6 +151,7 @@ state <- c(
 # Model function
 COVID.base <- function(t, state, parameters) {
     with(as.list(c(state, parameters)), {
+
         # Calculate the total population size
         Total_population <- Susceptible + Exposed + Infectious + Recovered
 
@@ -183,7 +191,7 @@ solve.base.model <- function(y_ = state,
     out <- as.data.frame(out) %>%
         mutate(
             Prevalence = Exposed + Infectious,
-            Incidence = Exposed / parms_["latent_period"],
+            Incidence = Exposed * (1/parms_["latent_period"]),
             Cumulative_incidence = cumsum(Incidence) + Incidence[1],
             Population = Susceptible + Exposed + Infectious + Recovered,
             Date = times_
@@ -226,12 +234,15 @@ SSQ_initial <- sum((uncontrolled_period$Cases[-1] - out_init$Incidence[-1])^2)
 SSQ_initial
 ```
 
-If we were to minimise `SSQ_initial`, given our parameters $R_0$ and $I(t=0)$ we can argue that we have found our parameters of interest. 
+<!-- fixme: Update wording to be clearer about what is about to happen -->
+If we were to minimise `SSQ_initial`, given our parameters $\mathcal{R}_0$ and $I(t=0)$ we can argue that we have found our parameters of interest. 
 
 ## Transforming the parameters
-Before launching into a minimisation of our SSQ function across all parameter space for the values of $R_0$ and $I(t=0)$, it would behoove us to pause and plan our search carefully. We will use the `optim()` function to minimize our function, but we should be cognisant of the fact that this function searches over all conceivable values of the parameters (i.e., from $-\infty$ to $\infty$).
+Before launching into a minimisation of our SSQ function across all parameter space for the values of $\mathcal{R}_0$ and $I(t=0)$, we should pause and plan our search carefully. 
 
-What are the feasible ranges of values for our two parameters: $R_0$ and $I(t=0)$?
+We will use the `optim()` function to minimize our function, but we should be aware of the fact that this function searches over all conceivable values of the parameters (i.e., from $-\infty$ to $\infty$).
+
+What are the feasible ranges of values for our two parameters: $\mathcal{R}_0$ and $I(t=0)$?
 <textarea name='Text1' cols='127' rows='2'></textarea>
 
 With this in mind, it would be sensible to restrict our search to only those values of parameters that are feasible. Not only should this increase the speed of the algorithm (hopefully leading to the desired answer more quickly) but may also help us avoid any computational errors that might arise which will kill our search prematurely. For this purpose, we introduce a set of transformed parameters, that is parameters that exist in the full interval $-\infty$ to $\infty$, but can be mapped back to our feasible regions for our parameters.
@@ -242,6 +253,8 @@ With this in mind, it would be sensible to restrict our search to only those val
 
 If $x \in (-\infty,\infty)$, then $\exp(x) \in [0,\infty)$. Therefore if we know $R_0$ and $I(t=0)$, we would use $\log$ to transform back into the `optim()` space. If we want the opposite we can use $\exp$.
 :::
+
+<!-- fixme: Potentially remove transformation and replace with bounded optimisation -->
 
 ```{r transform-params}
 # transform the parameters
@@ -330,6 +343,8 @@ optim_NM <- optim(
 ```
 Once the search is complete, inspect the solution:
 
+<!-- todo: Make this explanation of the convergence code stronger -->
+
 ```{r SSQ-check-fit}
 # Check for convergence (always code 0 for NM)
 optim_NM$convergence # 0 - converged; 1 - failed to converge
@@ -358,6 +373,8 @@ How does the SSQ score at the optimal value compare with our initial SSQ score (
 
 Satisfied that we have found the optimal solution, let's now solve the model using these parameter values and compare the solution with our observed data:
 
+<!-- fixme: Order of these plots, highlight that data beyond where we did the fitting may not relate back to the model -->
+
 ```{r SSQ-optimal-fit-with-data}
 #### Optimal model solution ####
 
@@ -381,7 +398,15 @@ optimal_solution <- solve.base.model(
 # Plot the optimal solution
 ggplot(first_wave) +
     geom_col(aes(x = Date, y = Cases), width = 1, fill = "dodgerblue2", colour = "blue") +
-    geom_point(data = optimal_solution, aes(x = Date, y = Incidence), size = 2, colour = "firebrick2") +
+    geom_line(data = optimal_solution, aes(x = Date, y = Incidence), size = 2, colour = "firebrick2") +
+    ylab("Daily cases") +
+    xlab("") +
+    ggtitle("Fit to unmitigated period") +
+    theme_bw()
+
+ggplot(uncontrolled_period) +
+    geom_col(aes(x = Date, y = Cases), width = 1, fill = "dodgerblue2", colour = "blue") +
+    geom_line(data = optimal_solution, aes(x = Date, y = Incidence), size = 2, colour = "firebrick2") +
     ylab("Daily cases") +
     xlab("") +
     ggtitle("Fit to unmitigated period") +
@@ -520,6 +545,8 @@ poisson_negative_log_likelihood_initial
   
 There are many possible distributions that can be used to develop the likelihood. You may wish to investigate some of the density distributions available in R, which you can do by typing `?distributions` in your console.
 
+<!-- todo: Maybe update this explanation to talk about count data and what distribution we can choose -->
+
 Another distribution, which allows us to account for high variability in the data is the negative binomial distribution. We could use the output from our last function call to calculate the likelihood of our observed data given our COVID model using `dnbinom()` function in much the same way as the Poisson distribution. Those with a particular interest in statistics and probability distributions may wish to experiment and to consider the pros and cons of different choices. For the remainder of this exercise, however, we will continue with the Poisson distribution which has the attribute of having only one parameter to estimate, the mean.
 
 :::{.callout-tip}
@@ -531,6 +558,8 @@ The decision on what distribution to use within your likelihood function is a *M
 With our likelihood function defined mathematically, let us now start thinking about how to set it up in R. We again want to use the `optim` function to determine the optimal parameters, however, `optim()` will solve for the minimum as opposed to the maximum (we want the maximum likelihood). Because of this, we shall put a minus sign in front of our likelihood, that way finding the minimum of the new function will actually calculate the maximum that we want!
 
 So now we are equipped to fit our likelihood function, using code like below:
+
+<!-- fixme: No longer using transformed parameters and change optim algorithm -->
 
 ```{r fit-function-NLL}
 #### Fitting routine ####
@@ -626,6 +655,9 @@ Why might this be?
 If we chose a different distribution, could we get a different answer?
 <textarea name='Text1' cols='127' rows='2'></textarea>
 
+<!-- fixme: move to bottom or put in collapse/tab -->
+
+<!-- Ending: We modelled a poisson. Still things to think about: uncertainty, are we modelling the right process, is our data representing what we are fitting to? When is fitting of value to the question? -->
 
 ## Bonus code 
 Copy and paste this code to perform a grid search - getting the negative log likelihood across a sequence of each parameter value.
