--- a/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
+++ b/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
@@ -131,7 +131,7 @@ ggplot(outbreak, aes(x = Date, y = Cases)) +
                linetype='dashed', size=1.3) +
     annotate(
         geom = "text",
-        label = c("lockdown", "Curfew"),
+        label = c("Emergency", "Curfew"),
         x = c(emergency_start_date, curfew_start_date),
         y = c(175, 175),
         angle = 90,
@@ -299,7 +299,7 @@ ggplot(outbreak) +
                linetype='dashed', size=1) +
     annotate(
         geom = "text",
-        label = c("lockdown", "Curfew"),
+        label = c("Emergency", "Curfew"),
         x = c(emergency_start_date, curfew_start_date),
         y = c(175, 175),
         angle = 90,
@@ -372,9 +372,8 @@ Optimisation algorithms by default will try any value for a parameter (i.e. $(-\
 Now we're in a place to use `optim` again, just like we've done
 previously.
 
-<!-- fixme: Change name of optim_NM -->
 ```{r using-optim}
-optim_NM <- optim(
+optimal_efficacy_parameters <- optim(
     par = init_parameters,
     fn = negative.log.likelihood,
     method = "L-BFGS-B",
@@ -384,16 +383,16 @@ optim_NM <- optim(
 )
 
 # Check for convergence
-optim_NM$convergence # 0 - converged; nonzero - failed
+optimal_efficacy_parameters$convergence # 0 - converged; nonzero - failed
 
 # Optimal parameters:
-optim_NM$par[c(
+optimal_efficacy_parameters$par[c(
     "emergency_efficacy",
     "curfew_efficacy"
 )]
 
 # Inspect the optimal negative log-likelihood
-optim_NM$value
+optimal_efficacy_parameters$value
 ```
 
 This is smaller than our initial value, because we are minimising the negative log likelihood. 
@@ -402,7 +401,7 @@ It has decreased a lot, which is a good sign that we have found a better fit tha
 
 ```{r optimal-plot}
 optimal_parameters <- parameters
-optimal_parameters[c("emergency_efficacy", "curfew_efficacy")] <- optim_NM$par[c("emergency_efficacy","curfew_efficacy")]
+optimal_parameters[c("emergency_efficacy", "curfew_efficacy")] <- optimal_efficacy_parameters$par[c("emergency_efficacy","curfew_efficacy")]
 
 
 
@@ -454,7 +453,7 @@ ggplot(outbreak) +
     ) +
     annotate(
         geom = "text",
-        label = c("lockdown", "Curfew"),
+        label = c("Emergency", "Curfew"),
         x = c(emergency_start_date, curfew_start_date),
         y = c(175, 175),
         angle = 90,
@@ -468,13 +467,11 @@ parameter uncertainty, we use the same method as last time, with the square root
 
 <!-- todo: If parameter uncertainty is going to stay here, then it also has to be covered in session 5 or moved here -->
 
-<!-- fixme: Curfew & Lockdown vs Emergency & Curvew --
-
 ```{r report-uncertainty}
-covar_matrix <- solve(optim_NM$hessian)
+covar_matrix <- solve(optimal_efficacy_parameters$hessian)
 std_errors <- sqrt(diag(covar_matrix))
 estimates <- data.frame(
-    estimate = optim_NM$par,
+    estimate = optimal_efficacy_parameters$par,
     std_error = std_errors
 ) %>%
     dplyr::mutate(
@@ -549,10 +546,10 @@ Your code to explore the counterfactuals might look like this:
 <!-- todo: Draw original fit as well on the top -->
 ```{r counter_factual_eg_solutions, echo=TRUE}
 # create a function to do the same steps over for us
-scenario.exploration = function(lockdown_eff, curfew_eff, lockdown_start, curfew_start, plot_title){
+scenario.exploration = function(emergency_eff, curfew_eff, emergency_start, curfew_start, plot_title){
   
   new_params = parameters 
-  new_params[c("lockdown_efficacy", "curfew_efficacy")] = c(lockdown_eff, curfew_eff)
+  new_params[c("emergency_efficacy", "curfew_efficacy")] = c(emergency_eff, curfew_eff)
 
   new_solution <- solve.intervention.model(
     y_ = state,
@@ -594,7 +591,7 @@ ggplot(outbreak) +
     xlab("") +
     ggtitle(plot_title) +
     geom_vline(
-        aes(xintercept = lockdown_start),
+        aes(xintercept = emergency_start),
         linetype = "dashed", colour = "firebrick"
     ) +
     geom_vline(
@@ -603,8 +600,8 @@ ggplot(outbreak) +
     ) +
     annotate(
         geom = "text",
-        label = c("lockdown", "Curfew"),
-        x = c(lockdown_start, curfew_start),
+        label = c("Emergency", "Curfew"),
+        x = c(emergency_start, curfew_start),
         y = c(175, 175),
         angle = 90,
         vjust = 1.5
@@ -621,8 +618,8 @@ ggplot(outbreak) +
 }
 
 ### No intervention ###
-scenario.exploration(lockdown_eff=0, curfew_eff=0, 
-                     lockdown_start=emergency_start_date, 
+scenario.exploration(emergency_eff=0, curfew_eff=0, 
+                     emergency_start=emergency_start_date, 
                      curfew_start=curfew_start_date, 
                      plot_title="Counterfactual: No interventions")
 
@@ -632,23 +629,23 @@ emergency_start_date_orig = emergency_start_date
 curfew_start_date_orig = curfew_start_date
 # set new values
 emergency_start_date <- fitting_start_date  #  fitting start date
-scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+scenario.exploration(emergency_eff=optimal_parameters["emergency_efficacy"], 
                      curfew_eff=optimal_parameters["curfew_efficacy"], 
-                     lockdown_start=emergency_start_date, 
+                     emergency_start=emergency_start_date, 
                      curfew_start=curfew_start_date, 
                      plot_title="Counterfactual: Emergency declaration made at beginning of fitting window")
 # set new values
 emergency_start_date <- fitting_start_date + 10 # 10 days after fitting start date
-scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+scenario.exploration(emergency_eff=optimal_parameters["emergency_efficacy"], 
                      curfew_eff=optimal_parameters["curfew_efficacy"], 
-                     lockdown_start=emergency_start_date, 
+                     emergency_start=emergency_start_date, 
                      curfew_start=curfew_start_date, 
                      plot_title="Counterfactual: Emergency declaration made 10 dates after fitting window")
 # now make it so no curfew in this scenario
 curfew_start_date <- fitting_end_date
-scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+scenario.exploration(emergency_eff=optimal_parameters["emergency_efficacy"], 
                      curfew_eff=optimal_parameters["curfew_efficacy"], 
-                     lockdown_start=emergency_start_date, 
+                     emergency_start=emergency_start_date, 
                      curfew_start=curfew_start_date, 
                      plot_title="Counterfactual: Emergency declaration made 10 days after fitting window, no curfew")
 
@@ -656,9 +653,9 @@ scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"],
 ### Curfew starts at same time as state of emergency declared ###
 emergency_start_date <- emergency_start_date_orig
 curfew_start_date <- emergency_start_date
-scenario.exploration(lockdown_eff=optimal_parameters["emergency_efficacy"], 
+scenario.exploration(emergency_eff=optimal_parameters["emergency_efficacy"], 
                      curfew_eff=optimal_parameters["curfew_efficacy"], 
-                     lockdown_start=emergency_start_date, 
+                     emergency_start=emergency_start_date, 
                      curfew_start=curfew_start_date, 
                      plot_title="Counterfactual: Curfew starts same time as emergency declaration")
 
