--- a/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
+++ b/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
@@ -1,12 +1,12 @@
 ---
 title: "Differential Equations in R"
-author:
-    - Developed by <a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a> and <a href="https://research.jcu.edu.au/portfolio/rhondda.jones/">Rhondda Jones</a>
-    - Presented by <a href="https://research.monash.edu/en/persons/michael-lydeamore">Michael Lydeamore</a> and Eamon Conway
-    - July 2022
-output:
-    html_document:
-        self_contained: yes
+subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+format:
+    training-html:
+        presenter: Michael Lydeamore, Monash University & Eamon Conway, Walter and Eliza Hall Institute
+        contributors:
+            - Michael Meehan, Australian Institute of Tropical Health & Medicine, James Cook University
+            - Rhondda Jones, Australian Institute of Tropical Health & Medicine, James Cook University
 ---
     
 ```{r, echo=F}
@@ -14,19 +14,7 @@ knitr::opts_chunk$set(
     fig.align = "center"
 )
 ```
-```{css, echo=F}
-textarea {
-    width: 100%;
-}
 
-.line-block {
-    line-height: 1.5em;
-}
-
-.line-block a {
-    font-style: italic;
-}
-```
 ### Open a new script file for this session
 
 We have put a file in the `./student_materials` folder and given it a meaningful name, `session2_differential_equations_practical`.
