--- a/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
+++ b/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Fitting Models in R"
-date: March 2023
-date-format: MMMM YYYY
+subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
 format: 
     training-html:
         presenter: Eamon Conway, Walter and Eliza Hall Institute
