--- a/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
+++ b/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
@@ -1,21 +1,14 @@
 ---
 title: "Vector-borne disease models in R"
-author: |
-  | ***SPARK short course 'Mathematical Modelling of Infectious Diseases', Indonesia, March 2023***
-  |
-  | ***Developed and presented by <a href="https://www.doherty.edu.au/people/patricia-trish-campbell" 
-      >Trish Campbell</a>, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity***
-output: 
-  html_document:
-     self_contained: yes
-     link-external-icon: true
-     link-external-newwindow: true
+subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+format:
+  training-html:
+    presenter: Trish Campbell, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity
+    contributors:
+       - Trish Campbell, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity
 execute:
   echo: false
   warning: false
-editor: 
-  markdown: 
-    wrap: 72
 ---
 
 ```{r, echo=F}
@@ -24,19 +17,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{css, echo=F}
-textarea {
-    width: 100%;
-}
-
-.line-block {
-    line-height: 1.5em;
-}
-
-.line-block a {
-    font-style: italic;
-}
-```
 
 # Summary {.tabset .tabset-pills .tabset-fade}
 
