--- a/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.qmd
+++ b/session1_intro_to_mathematical_modelling/session1_intro_to_mathematical_modelling.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Introduction to Mathematical Modelling"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "The basic concepts of mathematical modelling of infectious diseases."
 format:
     training-html:
         presenter: Emma McBryde, Australian Institute of Tropical Health & Medicine, James Cook University
@@ -19,16 +20,6 @@ knitr::opts_chunk$set(
     fig.align = "center"
 )
 ```
-
-
-Thanks to:
-
-* [Lisa White]("http://www.tropmedres.ac/researchers/researcher/lisa-white"), Nuffield Department of Medicine, Oxford University and
-* [Wirichada Pan-Ngum]("http://www.tropmedres.ac/wirichada-pan-ngum"), Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.
-
-Adapted and presented by [Emma McBryde]("https://research.jcu.edu.au/portfolio/emma.mcbryde"), Australian Institute of Tropical Health & Medicine, James Cook University July 2022
-
-Adapted and presented by [Roslyn Hickson]("https://research.jcu.edu.au/portfolio/roslyn.hickson/"), College of Public Health, Medical and Veterinary Sciences, and Australian Institute of Tropical Health & Medicine, James Cook University (and CSIRO) March 2023
 
 # Summary
 
