--- a/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
+++ b/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Differential Equations in R"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "Solving ordinary differential equations in R"
 format:
     training-html:
         presenter: Michael Lydeamore, Monash University & Eamon Conway, Walter and Eliza Hall Institute
@@ -15,11 +16,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-### Open a new script file for this session
+## Open a new script file for this session
 
 We have put a file in the `./student_materials` folder and given it a meaningful name, `session2_differential_equations_practical`.
 
-### Code summary
+## Code summary
 It is good practice to write a short description of your code to summarise its purpose for future users. Below is an example of such a description. Open RStudio, create a new file and copy and paste the code chunk below into your editor to start writing your own code:
 
 ```{r, echo=T}
@@ -36,7 +37,7 @@ It is good practice to write a short description of your code to summarise its p
 
 
 
-### Set working directory
+###Set working directory
 
 You must let R know the location of any files you plan to import, so remember to set your working directory. The most reproducible way to do this is to use an RStudio Project, combined with the `here` package. Projects do a few things:
 
