--- a/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.qmd
+++ b/session3_writing_a_model_to_suit_the_infectious_agent/session3_writing_a_model_to_suit_the_infectious_agent.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Designing a model to suit the pathogen"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "Practice in building a model"
 format:
   training-html:
     presenter: Emma McBryde, Australian Institute of Tropical Health & Medicine, James Cook University
