--- a/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
+++ b/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Fitting Models in R"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "Take your model and formally fit it on data"
 format: 
     training-html:
         presenter: Eamon Conway, Walter and Eliza Hall Institute
