--- a/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
+++ b/session8_vector_borne_modelling_in_r/session8_vector_borne_modelling_in_r.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Vector-borne disease models in R"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "Extend your vector-born disease models"
 format:
   training-html:
     presenter: Trish Campbell, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity
