--- a/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
+++ b/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Modelling interventions in R"
 subtitle: SPARKLE short course 'Mathematical Modelling of Infectious Diseases'
+description: "Take the model of COVID and introduce interventions"
 format:
     training-html:
         presenter: Michael Lydeamore, Monash University
